/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.server.proto;

option java_outer_classname = "NodesInfoProto";

message NodesInfo {
  string nodeId = 1;
  int64 processId = 2;
  string address = 3;
  string displayName = 4;
  string hash = 5;
  string jvmInfoVersion = 6;
  string jvmHeapMax = 7;
}
